--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,8 @@ main{
 }
 .one{
     background-color: hsl(31, 77%, 52%);
+    border-radius: 1rem 0 0 1rem;
+
 }
 p{
     line-height: 25px;
@@ -36,6 +38,8 @@ h2{
 }
 .three{
     background-color: hsl(179, 100%, 13%);
+    border-radius: 1rem 0 0 1rem;
+
 }
 a{
     display: flex;
